--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 before_script:
   - cd Chell
+  - install: git clone https://github.com/chopshop-166/wpilib-mirror.git ~/wpilib
+  
+script: ant jar
 jdk:
   - oraclejdk8
+  sudo: false
+
+
