--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: java
 before_script:
   - cd Chell
-  - install: git clone https://github.com/chopshop-166/wpilib-mirror.git ~/wpilib
+  
+install: git clone https://github.com/chopshop-166/wpilib-mirror.git ~/wpilib
   
 script: ant jar
 jdk:
