--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,5 @@
 sudo: false
 language: java
-before_script:
-  - cd Chell
-  
 install: git clone https://github.com/chopshop-166/wpilib-mirror.git ~/wpilib
-  
 script: ant jar
-jdk:
-  - oraclejdk8
-
-
+jdk: oraclejdk8
